--- a/week2/pixels/index.html
+++ b/week2/pixels/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script> -->
 
-    <title>Time</title> 
+    <title>Pixels</title> 
     <!--
         Use this page to complete the "Pixels" project:
         https://canvas.umw.edu/courses/1446087/assignments/10969661
