--- a/week1/1.2.ransom-letter/index.html
+++ b/week1/1.2.ransom-letter/index.html
@@ -18,7 +18,21 @@
 <body>
 
     <div>
-        <p>This is a paragraph.</p>
+        <p>
+            <span style="color:red;">N</span>
+            <span style="color:black;background-color:blue;">O</span>
+            <span style=<p><b>G</b></p</span>
+            <span style=<p><i>U</i></p</span>
+            <span style=<sub>t</sub</span>
+            <span style=<p><sup>S,</sup></p</span>
+            <span style=<p><small>N</span></p</span>
+            <span <p style="font-family:lucida handwriting">o</p</span>
+            <span style=<p><mark>S</mark></p</span>
+            <span style=<p><del>T</del></p</span>
+            <span <p style="font-size:30px">O</p</span>
+            <span <p style="font-family:verdana">R</p</span>
+            <span <p style="font-family:'Courier New'">Y</p</span>
+            
     </div>  
 </body>
 </html> 
